# kotuku

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  readme.md
.claude/: settings.json
.github/: copilot-instructions.md
apps/: CMakeLists.txt  find.tiri  httpserver.tiri  httpserver_cfg.json  paintbox.tiri  proximity.tiri  tuku.tiri  tuku_server.tiri  tuku_server_cfg.json  vuepoint.tiri
apps/tests/: test_proximity.tiri  test_tuku.tiri  test_tuku_server.tiri
data/fonts/: options.cfg
docs/: wiki-header.html
docs/html/: gallery.html  index.html
examples/: benchmark_particles.tiri  colourdialog.tiri  divider.tiri  gamepad.tiri  gradients.tiri  image_filtering.tiri  keyboard.tiri  view.tiri  vue.tiri  wavefunction.tiri  widgets.tiri
examples/io/: get_env.tiri  read_stdout.tiri
include/kotuku/: log.h  main.h  memtracker.h  objects.h  strings.hpp  vector.hpp
pkg/: build-deb-tarball.sh
pkg/debian/: control.in  copyright
scripts/: datetime.tiri  gui.tiri  json.tiri  options.tiri  tempus.tiri  vfx.tiri
scripts/gui/: button.tiri  colourdialog.tiri  columnview.tiri  combobox.tiri  dialog.tiri  divider.tiri  dropdown.tiri  filedialog.tiri  fileview.tiri  fontdialog.tiri  icon.tiri  input.tiri  libview.tiri  listview.tiri  menu.tiri  menubar.tiri  scrollbar.tiri  slider.tiri  toolbar.tiri  window.tiri
scripts/io/: filesearch.tiri
scripts/net/: httpserver.tiri  proxyserver.tiri  url.tiri
src/audio/: CMakeLists.txt  alsa.cpp  audio.cpp  audio.h  audio.tdl  class_audio.cpp  class_sound.cpp  commands.cpp  device_enum.cpp  functions.cpp  mixer_dispatch.h  mixers.cpp  windows.h
src/backstage/: CMakeLists.txt  backstage.cpp  http.cpp  interface.tiri  router.cpp  routes.cpp  server.cpp  websocket.cpp
src/backstage/routes/: agents.cpp  classes.cpp  diagnostics.cpp  docs.cpp  errors.cpp  jobs.cpp  logs.cpp  modules.cpp  objects.cpp  ping.cpp  scripts.cpp  subscriptions.cpp
src/backstage/tests/: test_backstage.tiri
src/core/: CMakeLists.txt  core.cpp  core_close.cpp  data.cpp  data_actionlist.cpp  data_errors.cpp  data_functions.c  defs.h  fs_folders.cpp  fs_identify.cpp  fs_resolution.cpp  fs_volumes.cpp  fs_watch_path.cpp  idl.h  internal.cpp  lib_events.cpp  lib_fields_read.cpp  lib_fields_write.cpp  lib_filesystem.cpp  lib_functions.cpp  lib_locking.cpp  lib_log.cpp  lib_memory.cpp  lib_messages.cpp  lib_objects.cpp  prototypes.h
src/display/: CMakeLists.txt  _display.cpp  class_bitmap.cpp  class_bitmap_def.c  class_clipboard.cpp  class_controller.cpp  class_controller_def.c  class_display.cpp  class_display_def.c  class_pointer.cpp  defs.h  display-driver.cpp  display.tdl  idl.h  lib_bitmap.cpp  lib_cursor.cpp  lib_display.cpp  lib_input.cpp  lib_surfaces.cpp  module_def.c  prototypes.h
src/document/: CMakeLists.txt  debug.cpp  document.cpp  draw.cpp  dunit.cpp  functions.cpp  layout.cpp  menu.cpp  parsing.cpp  parsing_xquery.cpp  scrollbar.cpp  streamchar.cpp  ui.cpp
src/font/: CMakeLists.txt  class_font.cpp  font.cpp  font.tdl  font_bitmap.cpp  font_def.c  font_structs.h
src/http/: CMakeLists.txt  auth.c  auth.tiri  http.cpp  http.tdl  http_def.c  http_fields.cpp  http_functions.cpp  http_incoming.cpp
src/json/: json.cpp  test_json.tiri
src/launcher/: CMakeLists.txt  exec.cpp  origo.cpp
src/link/: CMakeLists.txt  base64.cpp  base64.h  common-win.cpp  init-unix.cpp  init-win.cpp  resource.rc.in  unicode.cpp  unicode.h
src/mp3/: mp3.cpp
src/network/: AGENTS.md  CMakeLists.txt  class_netlookup.cpp  class_netserver.cpp  class_proxy.cpp  class_proxy_def.c  module_def.c  net_iocp.cpp  net_linux.cpp  net_platform.h  net_windows.cpp  netserver_def.c  network.cpp  network.tdl  openssl.cpp  socket_errors.h  ssl_certificate_policy.h
src/network/clientsocket/: clientsocket.cpp
src/network/netclient/: netclient.cpp
src/network/netsocket/: netsocket.cpp  netsocket_def.c  netsocket_fields.cpp  netsocket_functions.cpp
src/network/tests/: test_bind_address.tiri  test_client_server.tiri  test_concurrency.tiri  test_dns_parallel.tiri  test_error_handling.tiri  test_iocp_pipeline.tiri  test_ipv6.tiri  test_keep_alive.tiri  test_performance.tiri  test_server_io.tiri  test_ssl.tiri  test_udp_basic.tiri  test_udp_broadcast_multicast.tiri  test_udp_ipv6.tiri  test_udp_performance.tiri  test_udp_tcp_coexistence.tiri
src/network/win32/: iocp.cpp  iocp.h  ssl_certs.cpp  ssl_connect.cpp  ssl_handshake.cpp  ssl_io.cpp  ssl_wrapper.cpp  ssl_wrapper.h  win32_ssl.cpp  winsockwrappers.cpp  winsockwrappers.h
src/picture/: CMakeLists.txt  picture.cpp  picture.tdl
src/picture_jpeg/: jpeg.cpp
src/regex/: CMakeLists.txt  regex.cpp  regex_def.c
src/scintilla/: class_scintilla.cxx  class_scintilla_ext.cxx  class_scintilla_search.cxx  pan_classes.cxx  pan_listbox.cxx  pan_menu.cxx  pan_surface.cxx  pan_window.cxx  scintilla.tdl  scintillakotuku.h
src/svg/: CMakeLists.txt  anim.h  anim_metrics.cpp  anim_motion.cpp  anim_parsing.cpp  anim_timing.cpp  anim_transform.cpp  anim_value.cpp  class_rsvg.cpp  class_svg.cpp  class_svg_def.c  gradients.cpp  parser.cpp  save_svg.cpp  svg.cpp  svg.tdl  utility.cpp
src/tiri/: CMakeLists.txt  (+20 more)
tools/: codex_setup.sh  docgen.tiri  docgen_wiki.tiri  flute.tiri  svg_mark.tiri
tools/tiri_lsp/: CMakeLists.txt  README.md  lsp_cache.tiri  lsp_definition.tiri  lsp_defs.tiri  lsp_handlers.tiri  lsp_hover.tiri  lsp_lib.tiri  lsp_parsing.tiri  lsp_protocol.tiri  lsp_signature.tiri  lsp_symbols.tiri  server.tiri
tools/tiri_lsp/.claude-plugin/: marketplace.json
tools/tiri_lsp/claude-plugins/tiri-lsp/: package.json
tools/tiri_lsp/include/: lsp_cache.tiri  lsp_definition.tiri  lsp_defs.tiri  lsp_handlers.tiri  lsp_hover.tiri  lsp_lib.tiri  lsp_parsing.tiri  lsp_protocol.tiri  lsp_signature.tiri  lsp_symbols.tiri
tools/tiri_lsp/tests/: test_definition.tiri  test_document_symbols.tiri  test_hover.tiri  test_semantic_tokens.tiri  test_signature_help.tiri
tools/tiri_lsp/vscode_plugin/: .vscodeignore  README.md  extension.js  package.json
tools/tiri_lsp/vscode_plugin/syntaxes/: tiri.tmLanguage.json
(+671 files in other folders)
